Fixed exp gap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -618,9 +618,10 @@ nav ul li a.active {
 .timeline-item:last-child {
     margin-bottom: 0px;
 }
-.mbt50{
-    margin-top: 80px;
-    margin-bottom: 50px;
+.exp-gap{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    visibility: hidden;
 }
 .timeline-dot {
     position: absolute;
